Log in and sign up with firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BigHeadWarriors</string>
+    <string name="title_activity_game">Game</string>
 </resources>
