--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">BigHeadWarriors</string>
     <string name="title_activity_game">Game</string>
+    <string name="title_activity_menu">MenuActivity</string>
 </resources>
